<resources>
    <string name="app_name">Planner</string>
    <string name="preferences">Settings</string>
    <string name="add_plan">Add Plan</string>
    <string name="plan_detail">Plan</string>
    <string name="history">History</string>
    <string name="unknown_task">Unknown task</string>
    <string name="temp_task">Temporary task</string>
    <string name="temp_tasks">Temporary Tasks</string>
    <string name="org_tasks">Org Tasks</string>
    <string name="add">Add</string>
    <string name="next_plan">Next task</string>
    <string name="current_plan">Current task</string>
    <string name="no_tasks">All done</string>
    <string name="deadline">Deadline: %1$s</string>
    <string name="scheduled">Scheduled: %1$s</string>
    <string name="priority">Priority: %1$s</string>
    <string name="no_space">Not enough space for new plans</string>
</resources>