<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PlanAddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tempTasksText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/temp_tasks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/tempTaskSep"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="?attr/surfaceColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tempTasksText" />

        <EditText
            android:id="@+id/tempTaskInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/temp_task"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/tempTaskAddButton"
            app:layout_constraintEnd_toStartOf="@+id/tempTaskAddButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tempTaskAddButton" />

        <Button
            android:id="@+id/tempTaskAddButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="?attr/buttonBackgroundColor"
            android:gravity="center"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:textColor="?attr/buttonForegroundColor"
            app:icon="@drawable/baseline_add_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tempTaskSep" />

        <LinearLayout
            android:id="@+id/tempTaskLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?attr/dividerHorizontal"
            android:orientation="vertical"
            android:showDividers="middle|end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tempTaskAddButton" />

        <TextView
            android:id="@+id/orgTasksText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/org_tasks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tempTaskLayout" />

        <View
            android:id="@+id/orgTaskSep"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="?attr/surfaceColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orgTasksText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/orgTasksView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orgTaskSep" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:contentDescription="Confirm"
        app:tint="?attr/buttonForegroundColor"
        android:focusable="true"
        android:src="@drawable/baseline_done_24"
        app:backgroundTint="?attr/buttonBackgroundColor" />

</FrameLayout>